# fast-collections

./: Cargo.toml  README.md  rust-toolchain.toml
benches/: main.rs  slab.rs
src/: cursor.rs  iterable_slab.rs  lib.rs  read.rs  slab.rs  string.rs  traits.rs  vec.rs
tests/: sandbox.rs  typenum.rs
