[package]
name = "fast_collections"
version = "0.42.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "noheap zero copy collections"
repository = "https://github.com/Bruce0203/fast_collections"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
generic-array = { version = "1.0.0", features = ["const-default"] }
typenum = "1.17.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "slab"
harness = false

