[package]
name = "fast_collections"
version = "0.61.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "noheap zero copy collections"
repository = "https://github.com/Bruce0203/fast_collections"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]

[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"

[[bench]]
name = "slab"
harness = false

[features]
default = ["std"]
std = []
